manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    name: auth-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: auth-api
  template:
    metadata:
      labels:
        name: auth-api
    spec:
      containers:
        - name: auth-api
          image: ethical/auth-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  labels:
    name: hello-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hello-api
  template:
    metadata:
      labels:
        name: hello-api
    spec:
      containers:
        - name: hello-api
          image: ethical/hello-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-service
  labels:
    name: dummy-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: dummy-api
  template:
    metadata:
      labels:
        name: dummy-api
    spec:
      containers:
        - name: dummy-api
          image: ethical/dummy-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
