manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    name: auth-api
spec:
  selector:
    name: auth-api
  ports:
    - port: 80
      name: http
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    name: hello-api
spec:
  selector:
    name: hello-api
  ports:
    - port: 80
      name: http
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  labels:
    name: dummy-api
spec:
  selector:
    name: dummy-api
  ports:
    - port: 80
      name: http
      targetPort: 3000
  type: ClusterIP
