manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
    - host: go-gateway.app
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
          - path: /dummy
            pathType: Prefix
            backend:
              service:
                name: dummy-service
                port:
                  number: 80
